# DHSVM-PNNL

./: .gitignore  CMakeLists.txt  README.md  example_configuration.sh
Create/: CMakeLists.txt  Create_File  Create_File.f90  Julian.f90  makefile
CreateStreamNetwork_PythonV/: channelclass.py  createstreamnetwork.py  roadaspect.py  rowcolmap.py  streammapfile.py  (+2 more)
DHSVM/: CMakeLists.txt  INPUT.Hamma.test  INPUT.Mercer.NetCDF  example_configuration.sh
DHSVM/Lib/: CMakeLists.txt  Makefile
DHSVM/UFconfig/: UFconfig.mk
DHSVM/UFconfig/xerbla/: xerbla.c
DHSVM/WRF_2014_Morr_NARR/: Book1.csv  dhsvm_all_var_input_NARR_Morr_2014_37.73128_-119.27952  dhsvm_all_var_input_NARR_Morr_2014_37.73397_-119.34766  dhsvm_all_var_input_NARR_Morr_2014_37.73661_-119.41582  dhsvm_all_var_input_NARR_Morr_2014_37.73922_-119.48398  dhsvm_all_var_input_NARR_Morr_2014_37.74179_-119.55216  dhsvm_all_var_input_NARR_Morr_2014_37.74432_-119.62032  dhsvm_all_var_input_NARR_Morr_2014_37.74681_-119.68850  dhsvm_all_var_input_NARR_Morr_2014_37.74926_-119.75669  dhsvm_all_var_input_NARR_Morr_2014_37.78245_-119.20789  dhsvm_all_var_input_NARR_Morr_2014_37.78517_-119.27608  dhsvm_all_var_input_NARR_Morr_2014_37.78786_-119.34429  dhsvm_all_var_input_NARR_Morr_2014_37.79051_-119.41250  dhsvm_all_var_input_NARR_Morr_2014_37.79312_-119.48072  dhsvm_all_var_input_NARR_Morr_2014_37.79570_-119.54892  dhsvm_all_var_input_NARR_Morr_2014_37.79823_-119.61715  dhsvm_all_var_input_NARR_Morr_2014_37.80072_-119.68537  dhsvm_all_var_input_NARR_Morr_2014_37.80317_-119.75361  dhsvm_all_var_input_NARR_Morr_2014_37.83634_-119.20441  dhsvm_all_var_input_NARR_Morr_2014_37.83908_-119.27265  dhsvm_all_var_input_NARR_Morr_2014_37.84177_-119.34092  dhsvm_all_var_input_NARR_Morr_2014_37.84441_-119.40915  dhsvm_all_var_input_NARR_Morr_2014_37.84703_-119.47742  dhsvm_all_var_input_NARR_Morr_2014_37.84960_-119.54569  dhsvm_all_var_input_NARR_Morr_2014_37.85213_-119.61396  dhsvm_all_var_input_NARR_Morr_2014_37.85463_-119.68224  dhsvm_all_var_input_NARR_Morr_2014_37.85708_-119.75052  dhsvm_all_var_input_NARR_Morr_2014_37.89025_-119.20093  dhsvm_all_var_input_NARR_Morr_2014_37.89297_-119.26923  dhsvm_all_var_input_NARR_Morr_2014_37.89567_-119.33753  dhsvm_all_var_input_NARR_Morr_2014_37.89831_-119.40583  dhsvm_all_var_input_NARR_Morr_2014_37.90093_-119.47414  dhsvm_all_var_input_NARR_Morr_2014_37.90351_-119.54245  dhsvm_all_var_input_NARR_Morr_2014_37.90604_-119.61078  dhsvm_all_var_input_NARR_Morr_2014_37.90853_-119.67911  dhsvm_all_var_input_NARR_Morr_2014_37.91099_-119.74744  dhsvm_all_var_input_NARR_Morr_2014_37.94414_-119.19744  dhsvm_all_var_input_NARR_Morr_2014_37.94688_-119.26578  dhsvm_all_var_input_NARR_Morr_2014_37.94957_-119.33414  dhsvm_all_var_input_NARR_Morr_2014_37.95222_-119.40250  (+41 more)
DHSVM/amlscripts/: addvalence.aml  arcintersect.aml  buildnal.aml  buildpal.aml  createroadnetwork.aml  createstreamnetwork.aml  gridanimate.aml  gridspot.aml  gridspot70.aml  modroadelevation.aml  nodesfrompoints.aml  roadaspect.aml  roadcut.aml  roaddirection.aml  roaddivide.aml  roadelevation.aml  roadfract.aml  roadmap.aml  roadmapfile.aml  roadnetwork.aml  roadorder.aml  roadslope.aml  roadslopeavg.aml  rowcolmap.aml  select.aml  soildepth.aml  streammapfile.aml  transfer.aml  wshd.aml  wshdaspect.aml  wshdflowfract.aml  wshdoutlet.aml  wshdslope.aml
DHSVM/config/: Input.Lawler.Forest  Input.Lawler.Gap  Input.Lawler.Gap.dynaveg  Input.Lawler.Opening  Template.Input.GriddedMet  thun_config44_id30_lowerppt.7_soils3_2010_NorESM1-M__rcp45.rcp85  thun_config44_id30_lowerppt.7_soils3_2010_NorESM1-M__rcp45.rcp85.ng
DHSVM/input/: Ts.asc  dem.txt  rveg.baseline.network  soil_fcap.asc  veg_fc.asc  veg_lai.asc
DHSVM/input/modelstate/: InitialState.txt
DHSVM/input_3x3/: dem_3x3_slope20_aspect0  mask_3x3.asc  mask_3x3_centeronly  soildepth_3x3_1.0m.asc  vegclass_3x3_3
DHSVM/input_3x3/state/: Channel.State.10.01.1996.00.00.00
DHSVM/input_Mercer/: Shadow.01.nc  Shadow.02.nc  Shadow.03.nc  Shadow.04.nc  Shadow.05.nc  Shadow.06.nc  Shadow.07.nc  Shadow.08.nc  Shadow.09.nc  Shadow.10.nc  Shadow.11.nc  Shadow.12.nc  SkyView.nc  adjust.classfile  dem.nc  flowdir.nc  mask.nc  rveg.network  soil.nc  soild.nc  stream.map  stream.network  veg.nc
DHSVM/input_Mercer/modelstate/: Interception.State.01.01.2002.03.00.00.nc  Snow.State.01.01.2002.03.00.00.nc  Soil.State.01.01.2002.03.00.00.nc
DHSVM/met/: subhourly_met
DHSVM/modelstate/: Channel.State.01.01.2002.03.00.00  Channel.State.06.30.2013.17.00.00
DHSVM/output_3x3/: Aggregated.Values  Mass.Balance  Stream.Flow  Streamflow.Only
DHSVM/program/: Aat.java  AatError.java  AddAat2.java  CMakeLists.txt  Calendar.c  Calendar.h  DHSVMChannel.h  FILL_SINKS_DHSVM.c  FileIOBin.c  FileIONetCDF.c  Files.c  InitArray.c  MakeChannelState.scr  MakeModelStateBin  MakeModelStateBin.c  MakeModelStateNetCDF.c  Makefile.ModelState  Makefile.ModelState.NetCDF  Makefile.Monthly.Shadow  Makefile.NearestChannel.NetCDF  ReportError.c  SizeOfNT.c  SizeOfNetCDF.c  WriteConstantMap.c  average_shadow  average_shadow_bin.c  average_shadow_netcdf.c  channel.h  channel_grid.c  channel_grid.h  constants.h  create_modelstate_netcdf.scr  create_nearest_channel_netcdf.scr  data.h  fifoNetCDF.h  fifobin.h  fileio.h  find_nearest_channel_bin.c  find_nearest_channel_netcdf.c  fixroads.c  (+18 more)
DHSVM/sourcecode/: .InitModelState.c.swp  AdjustStorage.c  Aggregate.c  AggregateRadiation.c  Avalanche.c  BinaryInputMap2D.cpp  BinaryInputMap2D.hpp  BuildDiffusivity.c  BuildSparseArrayElements.c  BuildSparseRowColIndices.c  CMakeLists.txt  CalcAerodynamic.c  CalcAvailableWater.c  CalcBagnold.c  CalcDistance.c  CalcEffectiveKh.c  CalcKhDry.c  CalcKinViscosity.c  CalcSafetyFactor.c  CalcSatDensity.c  CalcSnowAlbedo.c  CalcSolar.c  CalcTopoIndex.c  CalcTotalWater.c  CalcTransmissivity.c  CalcWeights.c  Calendar.c  Calendar.h  CanopyGapEnergyBalance.c  CanopyGapRadiation.c  CanopyResistance.c  ChannelState.c  CheckOut.c  CutBankGeometry.c  DHSVM3.1.1  DHSVM3.1.2  DHSVM3.1.3  DHSVM3.2  DHSVM3.3  DHSVMChannel.c  (+148 more)
RBM/: CMakeLists.txt  Makefile  RBM.f  RBM.fi
(+65 files in other folders)
